@@ -717,5 +717,8 @@ select st_astext(st_geomfromgml(
 -- #1957 --
 SELECT '#1957', ST_Distance(ST_Makeline(ARRAY['POINT(1 0)'::geometry]), 'POINT(0 0)'::geometry);
 
+-- #1978 --
+SELECT '#1978', round(ST_Length(ST_GeomFromText('CIRCULARSTRING(0 0,1 0,0 0)',0))::numeric,4);
+
 -- Clean up
 DELETE FROM spatial_ref_sys;
