@@ -222,3 +222,4 @@ NOTICE:  SRID value -1 converted to the officially unknown SRID value 0
 ERROR:  ST_Segmentize: invalid max_distance 0 (must be >= 0)
 ERROR:  invalid GML representation
 #1957|1
+#1978|3.1413
