@@ -34,6 +34,7 @@ PostGIS 2.1.0
   - #1802, improved function interruptibility.
   - #1856, tiger geocoder: reverse geocoder rating setting for prefer numbered highway name
   - #1938, Refactor basic ST_AddBand to add multiple new bands in one call
+  - #1978, wrong answer when calculating length of a closed circular arc (circle)
 
 * Fixes *
 
